# FS

./: README.md  pyproject.toml
src/FS/: client.py  fs.py  server.py
